--- a/stylesheets/less.css
+++ b/stylesheets/less.css
@@ -1,11 +1,11 @@
-/*	Less Framework 4
-	http://lessframework.com
-	by Joni Korpi
-	License: http://creativecommons.org/licenses/MIT/	*/
+/*  Less Framework 4
+  http://lessframework.com
+  by Joni Korpi
+  License: http://creativecommons.org/licenses/MIT/ */
 
 
-/*	Resets
-	------	*/
+/*  Resets
+  ------  */
 
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, 
 p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em, 
@@ -14,137 +14,363 @@ dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, figure, figcaption, hgroup, 
 menu, footer, header, nav, section, summary, time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
 article, aside, canvas, figure, figure img, figcaption, hgroup,
 footer, header, nav, section, audio, video {
-	display: block;
+  display: block;
 }
 
 a img {border: 0;}
 
-
-
-/*	Typography presets
-	------------------	*/
+/*  Typography presets
+  ------------------  */
 
 .gigantic {
-	font-size: 110px;
-	line-height: 120px;
-	letter-spacing: -2px;
+  font-size: 110px;
+  line-height: 120px;
+  letter-spacing: -2px;
 }
 
 .huge, h1 {
-	font-size: 68px;
-	line-height: 72px;
-	letter-spacing: -1px;
+  font-size: 68px;
+  line-height: 72px;
+  letter-spacing: -1px;
 }
 
 .large, h2 {
-	font-size: 42px;
-	line-height: 48px;
+  font-size: 42px;
+  line-height: 48px;
 }
 
 .bigger, h3 {
-	font-size: 26px;
-	line-height: 36px;
+  font-size: 26px;
+  line-height: 36px;
 }
 
 .big, h4 {
-	font-size: 22px;
-	line-height: 30px;
+  font-size: 22px;
+  line-height: 30px;
 }
 
 body {
-	font: 16px/24px Georgia, serif;
+  /*font: 14px/22px Georgia, serif;*/
+  font-size: 14px/22px;
+  font-family: "PT Sans", "Arial", "Helvetica", "Lucida Grande", "Gill Sans", "Verdana", sans-serif;
 }
 
 .small, small {
-	font-size: 13px;
-	line-height: 18px;
+  font-size: 13px;
+  line-height: 18px;
 }
 
 /* Selection colours (easy to forget) */
 
-::selection 	 	{background: rgb(255,255,158);}
-::-moz-selection 	{background: rgb(255,255,158);}
-img::selection 		{background: transparent;}
-img::-moz-selection	{background: transparent;}
+::selection     {background: rgb(255,255,158);}
+::-moz-selection  {background: rgb(255,255,158);}
+img::selection    {background: transparent;}
+img::-moz-selection {background: transparent;}
 body {-webkit-tap-highlight-color: rgb(255,255,158);}
 
+/* Font stacks */
+
+.afs-chunkfive { font-family: "ChunkFive", Rockwell, serif; ;}
+
+.afs-pt-sans { font-family: "PT Sans", "Arial", "Helvetica", "Lucida Grande", "Gill Sans", "Verdana", sans-serif; font-size: 1.000em;}
+
+.afs-nobile { font-family: "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif; font-size: 0.876em;}
+
+.afs-ubuntu { font-family: "Ubuntu", "Arial", "Helvetica", "Lucida Grande", "Verdana", "Gill Sans", sans-serif; font-size: 0.962em;}
 
 
-/*		Default Layout: 992px. 
-		Gutters: 24px.
-		Outer margins: 48px.
-		Leftover space for scrollbars @1024px: 32px.
+@font-face {
+  font-family: 'ChunkFive';
+  src: url('/fonts/ChunkFive/Chunkfive-webfont.eot');
+  src: local('☺'), url('/fonts/ChunkFive/Chunkfive-webfont.woff') format('woff'), url('/fonts/ChunkFive/Chunkfive-webfont.ttf') format('truetype'), url('/fonts/ChunkFive/Chunkfive-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: url('/fonts/PT-Sans/PTS75F-webfont.eot');
+  src: local('☺'), url('/fonts/PT-Sans/PTS75F-webfont.woff') format('woff'), url('/fonts/PT-Sans/PTS75F-webfont.ttf') format('truetype'), url('/fonts/PT-Sans/PTS75F-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: url('/fonts/PT-Sans/PTS76F-webfont.eot');
+  src: local('☺'), url('/fonts/PT-Sans/PTS76F-webfont.woff') format('woff'), url('/fonts/PT-Sans/PTS76F-webfont.ttf') format('truetype'), url('/fonts/PT-Sans/PTS76F-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: url('/fonts/PT-Sans/PTS56F-webfont.eot');
+  src: local('☺'), url('/fonts/PT-Sans/PTS56F-webfont.woff') format('woff'), url('/fonts/PT-Sans/PTS56F-webfont.ttf') format('truetype'), url('/fonts/PT-Sans/PTS56F-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'PT Sans';
+  src: url('/fonts/PT-Sans/PTS55F-webfont.eot');
+  src: local('☺'), url('/fonts/PT-Sans/PTS55F-webfont.woff') format('woff'), url('/fonts/PT-Sans/PTS55F-webfont.ttf') format('truetype'), url('/fonts/PT-Sans/PTS55F-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nobile';
+  src: url('/fonts/Nobile/nobile_bold-webfont.eot');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nobile';
+  src: url('/fonts/Nobile/nobile_bold_italic-webfont.eot');
+  src: local('☺'), url('/fonts/Nobile/nobile_bold_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_bold_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_bold_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Nobile';
+  src: url('/fonts/Nobile/nobile_italic-webfont.eot');
+  src: local('☺'), url('/fonts/Nobile/nobile_italic-webfont.woff') format('woff'), url('/fonts/Nobile/nobile_italic-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile_italic-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Nobile';
+  src: url('/fonts/Nobile/nobile-webfont.eot');
+  src: local('☺'), url('/fonts/Nobile/nobile-webfont.woff') format('woff'), url('/fonts/Nobile/nobile-webfont.ttf') format('truetype'), url('/fonts/Nobile/nobile-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/fonts/ubuntu/Ubuntu-B-webfont.eot');
+  src: local('☺'), url('/fonts/ubuntu/Ubuntu-B-webfont.woff') format('woff'), url('/fonts/ubuntu/Ubuntu-B-webfont.ttf') format('truetype'), url('/fonts/ubuntu/Ubuntu-B-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/fonts/ubuntu/Ubuntu-BI-webfont.eot');
+  src: local('☺'), url('/fonts/ubuntu/Ubuntu-BI-webfont.woff') format('woff'), url('/fonts/ubuntu/Ubuntu-BI-webfont.ttf') format('truetype'), url('/fonts/ubuntu/Ubuntu-BI-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/fonts/ubuntu/Ubuntu-I-webfont.eot');
+  src: local('☺'), url('/fonts/ubuntu/Ubuntu-I-webfont.woff') format('woff'), url('/fonts/ubuntu/Ubuntu-I-webfont.ttf') format('truetype'), url('/fonts/ubuntu/Ubuntu-I-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('/fonts/ubuntu/Ubuntu-R-webfont.eot');
+  src: local('☺'), url('/fonts/ubuntu/Ubuntu-R-webfont.woff') format('woff'), url('/fonts/ubuntu/Ubuntu-R-webfont.ttf') format('truetype'), url('/fonts/ubuntu/Ubuntu-R-webfont.svg#webfontX4pGz9fc') format('svg');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/*    Default Layout: 992px. 
+    Gutters: 24px.
+    Outer margins: 48px.
+    Leftover space for scrollbars @1024px: 32px.
 -------------------------------------------------------------------------------
 cols    1     2      3      4      5      6      7      8      9      10
 px      68    160    252    344    436    528    620    712    804    896    */
 
 body {
-	width: 896px;
-	padding: 72px 48px 84px;
-	background: rgb(232,232,232);
-	color: rgb(60,60,60);
-	-webkit-text-size-adjust: 100%; /* Stops Mobile Safari from auto-adjusting font-sizes */
+  width: 896px;
+  padding: 72px 48px 84px;
+  background: rgb(232,232,232);
+  color: rgb(60,60,60);
+  -webkit-text-size-adjust: 100%; /* Stops Mobile Safari from auto-adjusting font-sizes */
 }
 
+#header {
+  width: 896px;
+  border-bottom: 2px solid #000;
+  margin-bottom: 1em;
+}
 
+#header h1 {
+  font-family: "ChunkFive", Rockwell, serif;
+  font-size: 36px;
+  line-height: 36px;
+  letter-spacing: 0.1em;
+}
 
-/*		Tablet Layout: 768px.
-		Gutters: 24px.
-		Outer margins: 28px.
-		Inherits styles from: Default Layout.
+#header a {
+  text-decoration: none;
+  color: #333;
+}
+
+#name_tag {
+  font-size: 10px;
+  margin: 0 0 1em 5.5em;
+}
+
+#graphic {
+  width: 896px;
+  background-color: black;
+  margin-bottom: 1em;
+}
+
+.content_block {
+  float: left;
+  margin-right: 24px;
+}
+
+.content_block h2, #post h1 {
+  font-family: "Nobile", "Lucida Grande", "Verdana", "Arial", "Helvetica", "Gill Sans", sans-serif; font-size: 0.876em;
+  font-size: 16px;
+  line-height: 16px;
+  padding: 16px 0 8px 0;
+}
+
+.content_block p {
+  padding-bottom: 1em;
+}
+
+#about {
+  width: 160px;
+}
+
+#about p {
+  font-size: 13px;
+  line-height: 18px;
+  color: #666;
+}
+
+#blog, #post {
+  width: 528px;
+}
+
+#twitter {
+  width: 160px;
+  margin-right: 0;
+  margin-bottom: 1em;
+}
+
+#twitter .twtr-widget {
+  font-family: "PT Sans", "Arial", "Helvetica", "Lucida Grande", "Gill Sans", "Verdana", sans-serif !important;
+  font-size: 13px !important;
+}
+
+#twitter .twtr-bd {
+  color: #666;
+}
+
+#footer {
+  width: 896px;
+  clear: both;
+  border-top: solid 2px #333;
+}
+
+.posts {
+  list-style: none outside;
+}
+
+.post_date {
+  display: inline;
+  font-size: 10px;
+  color: #666;
+  padding-right: 2em;
+}
+
+a {
+  text-decoration: none;
+  color: #1A47B8;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/*    Tablet Layout: 768px.
+    Gutters: 24px.
+    Outer margins: 28px.
+    Inherits styles from: Default Layout.
 -----------------------------------------------------------------
 cols    1     2      3      4      5      6      7      8
 px      68    160    252    344    436    528    620    712    */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-	
-	body {
-		width: 712px;
-		padding: 48px 28px 60px;
-	}
+  
+  body {
+    width: 712px;
+    padding: 48px 28px 60px;
+  }
+
+  #header, #footer {
+    width: 712px;
+  }
+
+  #blog, #post {
+    width: 344px;
+  }
 }
 
 
 
-/*		Mobile Layout: 320px.
-		Gutters: 24px.
-		Outer margins: 34px.
-		Inherits styles from: Default Layout.
+/*    Mobile Layout: 320px.
+    Gutters: 24px.
+    Outer margins: 34px.
+    Inherits styles from: Default Layout.
 ---------------------------------------------
 cols    1     2      3
 px      68    160    252    */
 
 @media only screen and (max-width: 767px) {
-	
-	body {
-		width: 252px;
-		padding: 48px 34px 60px;
-	}
-	
+  
+  body {
+    width: 252px;
+    padding: 48px 34px 60px;
+  }
+  
+  #header, #footer, #about, #blog, #twitter, #post {
+    width: 252px;
+  }
 }
 
 
 
-/*		Wide Mobile Layout: 480px.
-		Gutters: 24px.
-		Outer margins: 22px.
-		Inherits styles from: Default Layout, Mobile Layout.
+/*    Wide Mobile Layout: 480px.
+    Gutters: 24px.
+    Outer margins: 22px.
+    Inherits styles from: Default Layout, Mobile Layout.
 ------------------------------------------------------------
 cols    1     2      3      4      5
 px      68    160    252    344    436    */
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-	
-	body {
-		width: 436px;
-		padding: 36px 22px 48px;
-	}
-	
+  
+  body {
+    width: 436px;
+    padding: 36px 22px 48px;
+  }
+
+  #header, #footer, #about, #blog, #twitter, #post {
+    width: 436px;
+  }
+  
 }
